# copycopy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: print_events.rs
src/: capture.rs  config.rs  detector.rs  event.rs  lib.rs  listener.rs  listener_macos.rs
src/gnome/: extension.js  installer.rs  listener.rs  metadata.json  mod.rs
