[package]
name = "copycopy"
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
description = "Global Ctrl/Cmd+C+C trigger: capture clipboard content + foreground app info and hand it to your code."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sincekmori/copycopy"
keywords = ["clipboard", "hotkey", "linux", "macos", "windows"]
categories = ["os", "api-bindings"]

[lints.rust]
missing_docs = "warn"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]

[dev-dependencies]
# TriggerStatus serialization-shape tests (the host IPC contract).
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
# Active window info (app name, title, and chromium browser URL on Windows/macOS).
x-win = "5.7.0"
# Multi-format clipboard reads (text, HTML, RTF, image, files).
clipboard-rs = "0.3.4"

# Windows / Linux-X11: passive global key listening via rdev (listen, not grab).
# NOT used on macOS (rdev's callback hits main-thread-only Carbon APIs).
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5.3"

# Linux GNOME Wayland: talk to our embedded GNOME Shell extension over the
# session bus (see src/gnome/). Blocking API only; runs on the listener thread.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }

# macOS: install our own ListenOnly CGEventTap on the main run loop, via the
# objc2 framework crates. Main-thread hops use dispatch2; see src/capture.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSPasteboard"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFRunLoop", "CFMachPort"] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = ["std", "CGEvent", "CGEventTypes"] }
dispatch2 = "0.3.1"

[[example]]
name = "print_events"
